# MilodyLite

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: autolint.yamlt  build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  workflow-formal.yml
apps/cmd/: cli.cpp
apps/cmd/biz/: Audio.h
apps/cmd/config/: Cmd.cpp  Cmd.h  CmdFlags.cpp  CmdFlags.h  Config.cpp  Config.h
apps/cmd/utils/: CliValidator.cpp  CliValidator.h  CollectionsHelper.cpp  CollectionsHelper.h  ExecutableHelper.cpp  ExecutableHelper.h
cmake/: MilodyMacros.cmake
cmake/Dav1dMeson/: milize_dav1d_android.meson.in  milize_dav1d_default.meson.in  milize_dav1d_ios.meson.in
ext/: .gitignore
include/Milody/audio/: milody_audio_types.h  milody_juce_audio_buffer.h  milody_juce_audio_device_manager.h  milody_juce_audio_format_reader.h  milody_juce_audio_source_player.h  milody_juce_format_manager.h  milody_juce_iir_filter_audio_source.h  milody_juce_logger_proxy.h  milody_juce_sound_player.h  milody_juce_sound_player_wrapper.h  milody_juce_time_slice_thread.h
include/Milody/common/: milize_todo.h  milody_export_macros.h
include/Milody/context/: context.h
include/Milody/game/: milody_game_interface.h  milody_game_retcode.h  milody_game_types.h
include/Milody/io/: milody_io.h
include/Milody/log/: log.h  log_c.h
include/Milody/platform/: milody_windows.h
include/Milody/util/: milody_binaryreader.h  milody_binarywriter.h  milody_bitflip.h  milody_class.h  milody_encoding.h  milody_env.h  milody_lazy.h  milody_serializerable.h  milody_strutil.h  milody_time.h
src/audio/: milody_audio_type.cpp  milody_juce_audio_buffer.cpp  milody_juce_audio_device_manager.cpp  milody_juce_audio_format_manager.cpp  milody_juce_audio_format_reader.cpp  milody_juce_audio_source_player.cpp  milody_juce_iir_filter_audio_source.cpp  milody_juce_logger_proxy.cpp  milody_juce_sound_player.cpp  milody_juce_sound_player_wrapper.cpp  milody_juce_time_slice_thread.cpp
src/context/: context.cpp
src/game/: milody_game_audio_audio_buffer.cpp  milody_game_audio_audio_device_manager.cpp  milody_game_audio_format_reader.cpp  milody_game_audio_juce_audio_source_player.cpp  milody_game_audio_sound_player.cpp  milody_game_context.cpp  milody_game_plugin_main.cpp
src/io/: milody_io.cpp
src/log/: log.cpp  log_unitylog.cpp
src/platform/: milody_windows.cpp
src/util/: milody_binaryreader.cpp  milody_binarywriter.cpp
